# programming

./: .bash_profile  .gitignore  .inputrc  .vimrc  .zshrc  Hotkeys (MassRelLappy's conflicted copy 2013-08-01).md  Hotkeys.md  fromBashProfile.zsh  myVimrcNow
Bash/: sortFilesByContents.sh
Basic_C_Header_Use/: HeadIt  OthersSource.c  UsesOther.c  header.h  intClash
Blog Posts/: 2048 Impmtn.md
C++ Using Header File/: .autotools  .cproject  RevStrg.cpp  RevStrg.h
CS345LispProjectFinal/: README.txt  demo.odp  demo.pot
CtHW/: .ex1.c.swp  ex1  ex1.c  ex1.out  ex14.c  ex3
Educational/C++/PaxosLab/: AOS Lab4 Paxos Notes.md  CMakeLists.txt  args.h  dssim.cpp  dssim.h  log.cpp  log.h  main.cpp  massert.h  md5.h  net.cpp  net.h  paxclient.h  paxlog.cpp  paxmsg.h  paxos_print.cpp  paxserver.h  version.cpp  word_vec_pax.cpp
Educational/C++/PaxosLab/code/: Makefile  args.cpp  dssim.h  make_unique.h  md5.cpp  node.cpp  node.h  parse_regex.cpp  pax  paxclient.cpp  paxlog.h  paxmsg.cpp  paxobj.h  paxos_exec.cpp  paxos_vc.cpp  paxserver.cpp  paxtypes.h  t.cpp  version.h  word_vec_pax.h
Educational/C++/PaxosLab/getoptpp/: CHANGELOG  CONTRIBUTORS  Makefile  README  SConscript
Educational/C++/PaxosLab/getoptpp/examples/: SConscript  example_env.cpp  example_extendingtypes_date.cpp  example_formatflags.cpp  example_global_option.cpp  example_helloworld.cpp  example_helloworld_ex.cpp  example_iterators.cpp  example_nomanip.cpp  example_nomanip_ex.cpp
Educational/C++/PaxosLab/getoptpp/getoptpp/: getopt_pp.h  getopt_pp_standalone.h  highlight.css
Educational/C++/PaxosLab/getoptpp/src/: getopt_pp.cpp
Educational/C++/PaxosLab/getoptpp/tests/: SConscript  format_test.cpp  simpleoptions_test.cpp
Educational/C++/PaxosLab/getoptpp/tests/ref/: options_file.opt  options_file2.opt
HotkeysMD/: Global.md  Hotkeys.md  IntelliJ.md  MacVim.md  Sublime.md  XCode.md  iTerm&UNIX.md
K&R C/: ex1-13
Notes/: Akka Notes.md  Algorithm Notes.md  Algorithms and Theory Notes.md  Bash Notes.md  C Notes.md  C++ Notes.md  CSS Notes.md  Compilers Notes.md  Computer Vision Notes.md  Data Structures Notes.md  Data Structures.md  Design Patterns Notes.md  Git Notes.md  HTML Notes.md  Java Collections Notes.md  Java Concurrency Notes.md  Java IO Notes.md  Java Libraries and Frameworks Notes.md  Java Network Programming Notes.md  Java Notes.md  JavaFX Notes.md  Javascript Notes.md  Math Notes.md  Matlab Notes.md  Misc Papers Notes.md  (+26 more)
StuffIWrote/C++/OpenGL-RedBook-Playground/: CMakeLists.txt  main.cpp
(+1655 files in other folders)
